# journal-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  release.yml  tag-on-merge.yml
app/: auth.py  firestore.py  main.py  models.py  routes.py
