[tool.poetry]
name = "journal-backend"
version = "0.1.0"
description = "AI-powered journaling backend with FastAPI and Firestore"
authors = ["Tremaine Johns <tjohns@lyticbrew.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
google-cloud-firestore = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
black = "^25.1.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"